--- a/config/telegram_users.json.example
+++ b/config/telegram_users.json.example
@@ -1,7 +1,7 @@
 {
     "1": {
-        "token": "7657259228:AAF2Ni6eq9jby70HAdPcntHWS1EETjvneBM",
-        "chat_id": "6124231421",
+        "token": "",
+        "chat_id": "",
         "enabled": true,
         "updated_at": "2025-09-26 10:00:00"
     }
