--- a/config/database.php.example
+++ b/config/database.php.example
@@ -1,7 +1,9 @@
 <?php
 /**
  * ไฟล์ตัวอย่างการตั้งค่าฐานข้อมูล
- * คัดลอกไฟล์นี้เป็น database.php และแก้ไขค่าตามการตั้งค่าของคุณ
+ * ระบบจองห้องประชุม เวอร์ชัน 2.2 Color Edition Pro
+ * 
+ * คำแนะนำ: คัดลอกไฟล์นี้เป็น database.php และแก้ไขค่าตามการตั้งค่าของคุณ
  */
 
 // Set timezone for Thailand
